Removed Scrollbar and Fixed Backgrounds

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 0;
+}
